fix: Fixed keyboard pushing button on top of everything, Nepal being too tall and restyled lives

--- a/src/app/game/game.component.scss
+++ b/src/app/game/game.component.scss
@@ -9,7 +9,7 @@
 
 .flag-container {
   width: clamp(300px, 50%, 600px);
-  max-height: 500px;
+  max-height: 300px;
   display: flex;
   justify-content: center;
 
